# 4T_POM_X4_robot

./: README.md
[1]控制算法与固件/Dog_Contorl_SDK_C6/: sdkconfig  sdkconfig.old
[1]控制算法与固件/Dog_Contorl_SDK_C6/main/: BLEt.c  BLEt.h  CMakeLists.txt  Dog_Sport.c  Dog_Sport.h  LIS2MDL.c  LIS2MDL.h  LSM6DSOW.c  LSM6DSOW.h  MadgwickAHRS.c  MadgwickAHRS.h  USB_CDC.c  USB_CDC.h  include.h  leg_ik.c  leg_ik.h  main.c  my_timer.c  my_timer.h  my_uart.c  my_uart.h  reg_protocol.c  reg_protocol.h
[1]控制算法与固件/Dog_Contorl_SDK_G4/: .mxproject  IO_Test.ioc
[1]控制算法与固件/Dog_Contorl_SDK_G4/BSP/Inc/: Dog_Sport.h
[1]控制算法与固件/Dog_Contorl_SDK_G4/BSP/Src/: Dog_Sport.c  POM_lis2mdl.c  POM_lsm6dso.c  leg_ik.c  reg_protocol.c
[1]控制算法与固件/Dog_Contorl_SDK_G4/Core/Inc/: RTE_Components.h  main.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h  usart.h
[1]控制算法与固件/Dog_Contorl_SDK_G4/Core/Src/: gpio.c  main.c  stm32g4xx_it.c  tim.c  usart.c
[1]控制算法与固件/Dog_Contorl_SDK_G4/MDK-ARM/: IO_Test.uvguix.Administrator  IO_Test.uvguix.jmc  IO_Test.uvguix.twelve  IO_Test.uvguix.yy  IO_Test.uvoptx  IO_Test.uvprojx  startup_stm32g431xx.lst  startup_stm32g431xx.s
[1]控制算法与固件/Dog_Contorl_SDK_G4/MDK-ARM/IO_Test/: IO_Test.axf  IO_Test.build_log.htm  IO_Test.hex  IO_Test.htm  IO_Test.lnp  IO_Test.map  IO_Test_IO_Test.dep  crc.d  custom_bus.d  dog_sport.d  g431_series.d  (+45 more)
[2]机器人模型/各部位源文件/: 右前左后外摆关节.stp  小腿.stp  左前右后外摆关节.stp
[3]硬件设计PCB/BOM/: xt30电池接口板.xlsx  机器人系列_通用扩展模块.xlsx
[3]硬件设计PCB/PCB/: ProPrj_xt30电池接口板.epro  ProPrj_机器人系列_通用扩展模块.epro
[4]蓝牙app/: 4T-POM-X4_Ctrl_demo.aia
[5]物料清单/: 3D打印件清单.xlsx  五金件清单.xlsx  器件清单.xlsx
(+98 files in other folders)
